[package]
name = "geodb"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Trivial geo information db"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1.6"
maxminddb = "0.23.0"
reqwest = "0.11.12"
rusqlite = "0.28.0"
serde_json = "1.0.87"
thiserror = "1.0.37"
tokio = { version = "1.21", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0.147", features = ["derive", "std"] }
flate2 = "1.0"
tar = "0.4"

[features]
asn = []
cities = []
